# idealis

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
nethermind/idealis/: exceptions.py  logging.py
nethermind/idealis/parse/ethereum/: consensus.py  execution.py  trace.py
nethermind/idealis/parse/shared/: erc_20_tokens.py  trace.py
nethermind/idealis/parse/starknet/: abi.py  block.py  contract.py  event.py  trace.py  transaction.py
nethermind/idealis/rpc/base/: async_rpc.py
nethermind/idealis/rpc/ethereum/: __init__.py  consensus.py  consensus_parsing.py  execution.py  trace_parsing.py
nethermind/idealis/rpc/starknet/: __init__.py  classes.py  contract.py  core.py  deployed.py  trace.py
nethermind/idealis/types/: base.py
nethermind/idealis/types/base/: __init__.py  (+2 more)
nethermind/idealis/utils/: __init__.py  formatting.py
nethermind/idealis/wrapper/: etherscan.py
tests/: .example.env  addresses.py  conftest.py  utils.py
tests/base/: test_erc20_balance_diffs.py
tests/ethereum/: test_blob_formatting.py  test_trace_parsing.py
tests/ethereum/parsing/: test_etherscan.py  test_parse_eth_blocks.py
tests/ethereum/rpc/: test_core.py
tests/starknet/: conftest.py
tests/starknet/parsing/: test_block_parsing.py  test_block_parsing.py.isorted  test_class_and_contract_parsing.py  test_contract_parsing.py  test_event_parsing.py  test_parse_messaging.py  test_protocol.py  test_trace_parsing.py  test_trace_parsing.py.isorted  test_transaction_parsing.py
tests/starknet/protocol/: test_starknet_id.py
tests/starknet/rpc/: test_blocks.py  test_contracts.py  test_deployed.py  test_events.py  test_proxies.py  test_tracing.py
(+32 files in other folders)
